tabilet auto generated

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 <ul>
 	<li>Public Area: <a href="/app.html#/p/?action=topics">/app.html#/p/?action=topics</a>
 	<li>a portal: <a href="/app.html#/a/?action=topics">/app.html#/a/?action=topics</a> (Login will popup)
-	<li>a logout button: &lt;button @click="logout('a', 'logout', {role:'HASH(0x56223ffe7b98)', comp:'', action:'topics'})"&gt;Logout&lt;/button&gt;
+	<li>a logout button: &lt;button @click="logout('a', 'logout', {role:'HASH(0x55ad88b4f778)', comp:'', action:'topics'})"&gt;Logout&lt;/button&gt;
 </ul>
 
 </body>
