tabilet auto generated

--- a/www/app.html
+++ b/www/app.html
@@ -25,18 +25,23 @@ var vm = new Vue({
   components: {
     'p-header': httpVueLoader('./p/header.vue'),
     'p-footer': httpVueLoader('./p/footer.vue'),
-    'p-choice-topics': httpVueLoader('./p/choice/topics.vue'),
+    'p-car-topics': httpVueLoader('./p/car/topics.vue'),
+    'p-car-edit': httpVueLoader('./p/car/edit.vue'),
     'p-question-edit': httpVueLoader('./p/question/edit.vue'),
     'p-question-topics': httpVueLoader('./p/question/topics.vue'),
+    'p-choice-topics': httpVueLoader('./p/choice/topics.vue'),
     'a-header': httpVueLoader('./a/header.vue'),
     'a-footer': httpVueLoader('./a/footer.vue'),
     'a-login': httpVueLoader('./a/login.vue'),
-    'a-choice-edit': httpVueLoader('./a/choice/edit.vue'),
     'a-choice-startnew': httpVueLoader('./a/choice/startnew.vue'),
+    'a-choice-edit': httpVueLoader('./a/choice/edit.vue'),
     'a-choice-topics': httpVueLoader('./a/choice/topics.vue'),
-    'a-question-edit': httpVueLoader('./a/question/edit.vue'),
     'a-question-startnew': httpVueLoader('./a/question/startnew.vue'),
+    'a-question-edit': httpVueLoader('./a/question/edit.vue'),
     'a-question-topics': httpVueLoader('./a/question/topics.vue'),
+    'a-car-edit': httpVueLoader('./a/car/edit.vue'),
+    'a-car-startnew': httpVueLoader('./a/car/startnew.vue'),
+    'a-car-topics': httpVueLoader('./a/car/topics.vue'),
 
   }
 });
