--- a/www/app.html
+++ b/www/app.html
@@ -16,7 +16,7 @@
 <script>
 
 var $scope = new VueGenelet({handler:"/app.php", "mime":"vue",
-		"role":"p", "comp":"question", "action":"topics"});
+		"role":"p", "comp":"car", "action":"topics"});
 $scope.start();
 
 var vm = new Vue({
@@ -33,15 +33,15 @@ var vm = new Vue({
     'a-header': httpVueLoader('./a/header.vue'),
     'a-footer': httpVueLoader('./a/footer.vue'),
     'a-login': httpVueLoader('./a/login.vue'),
-    'a-choice-startnew': httpVueLoader('./a/choice/startnew.vue'),
-    'a-choice-edit': httpVueLoader('./a/choice/edit.vue'),
-    'a-choice-topics': httpVueLoader('./a/choice/topics.vue'),
-    'a-question-startnew': httpVueLoader('./a/question/startnew.vue'),
     'a-question-edit': httpVueLoader('./a/question/edit.vue'),
+    'a-question-startnew': httpVueLoader('./a/question/startnew.vue'),
     'a-question-topics': httpVueLoader('./a/question/topics.vue'),
-    'a-car-edit': httpVueLoader('./a/car/edit.vue'),
     'a-car-startnew': httpVueLoader('./a/car/startnew.vue'),
     'a-car-topics': httpVueLoader('./a/car/topics.vue'),
+    'a-car-edit': httpVueLoader('./a/car/edit.vue'),
+    'a-choice-topics': httpVueLoader('./a/choice/topics.vue'),
+    'a-choice-startnew': httpVueLoader('./a/choice/startnew.vue'),
+    'a-choice-edit': httpVueLoader('./a/choice/edit.vue'),
 
   }
 });
