--- a/www/index.html
+++ b/www/index.html
@@ -7,16 +7,16 @@
 
 <h3>Web Site by Twig</h3>
 <ul>
-	<li>Public Area: <a href="/app.php/p/html/question?action=topics">/app.php/p/html/question?action=topics</a>
-	<li>a portal: <a href="/app.php/a/html/question?action=topics">/app.php/a/html/question?action=topics</a> (Login will popup)
+	<li>Public Area: <a href="/app.php/p/html/car?action=topics">/app.php/p/html/car?action=topics</a>
+	<li>a portal: <a href="/app.php/a/html/car?action=topics">/app.php/a/html/car?action=topics</a> (Login will popup)
 	<li>a logout: <a href="/app.php/a/html/logout">/app.php/a/html/logout</a>
 </ul>
 
 <h3>HTML5 App from API and Vuejs</h3>
 <ul>
-	<li>Public Area: <a href="/app.html#/p/question?action=topics">/app.html#/p/question?action=topics</a>
-	<li>a portal: <a href="/app.html#/a/question?action=topics">/app.html#/a/question?action=topics</a> (Login will popup)
-	<li>a logout button: &lt;button @click="logout('a', 'logout', {role:'p', comp:'question', action:'topics'})"&gt;Logout&lt;/button&gt;
+	<li>Public Area: <a href="/app.html#/p/car?action=topics">/app.html#/p/car?action=topics</a>
+	<li>a portal: <a href="/app.html#/a/car?action=topics">/app.html#/a/car?action=topics</a> (Login will popup)
+	<li>a logout button: &lt;button @click="logout('a', 'logout', {role:'p', comp:'car', action:'topics'})"&gt;Logout&lt;/button&gt;
 </ul>
 
 </body>
